# hpx

Daniel/reduction_with_partitioned_vector/: README.txt  reduction_partitioned_vector.cpp
Daniel/tansform_benchmark_partitioned_vector/: transform_partitioned_vector.cpp
Daniel/tansform_benchmark_partitioned_vector/scripts/: slurm-37006.out
Daniel/transform_with_partitioned_vector/: transform_partitioned_vector.cpp
Daniel/transform_with_partitioned_vector/scripts/: load-env.sh  slurm-37007.out  slurm-37008.out
HelloWorld/: CMakeLists.txt  Readme.txt  main.cpp
HelloWorld/scripts/: load-env.sh
constes_ideen/numa_V2/: CMakeLists.txt
constes_ideen/numa_V2/benchmark/: reduction.cpp  scan.cpp  transform.cpp
constes_ideen/numa_V2/include/: arena.hpp  numa_algorithm.hpp  numa_extensions.hpp
constes_ideen/numa_V2/scripts/: launch_qdr  launch_rome  launch_skylake  load-env.sh
hello_world_distributed/: CMakeLists.txt  Readme.txt
hello_world_distributed/scripts/: hello_world_distributed.txt  launch_hello_world_distributed  load-env.sh
hpx_template/numa_V1/benchmark/: hpx_bench.cpp  phind_transform_hpx.cpp  transform_reduce.cpp  valid_attempt_at_hpx_transform.cpp
hpx_template/numa_V1/benchmark/older_versions/: hpxtransform.cpp  phin2.cpp  phind_transform_hpx.cpp
nikitas_erkenntnisse/hpx/: CMakeLists.txt  alternative_transform.cpp  hello_world_distributed.cpp  reduction.cpp  transform.cpp
nikitas_erkenntnisse/hpx/scripts/: outQDR.txt  outROME.txt  outROME_transfrom.txt  reduction_rome.csv  run.sh  runQDR.sh  runROME.sh  runROME_REDUCE.sh  runROME_REDUCTION.sh  runROME_TRANSFORM.sh  transform_rome.csv
reduction_with_partitioned_vector/: CMakeLists.txt
reduction_with_partitioned_vector/scripts/: launch_partitioned_vector
simple_component/: CMakeLists.txt  Readme.txt  main.cpp
simple_component/scripts/: launch_simple_component  simple_component.txt
tansform_benchmark_partitioned_vector/: CMakeLists.txt
tansform_benchmark_partitioned_vector/scripts/: hello_out.csv  launch_partitioned_vector  outQDR_transfrom.txt  transform_qdr.csv
transform_with_partitioned_vector/: README.txt
